Poselibrary 'flip pose' function is causing lattice controls to rotate unexpectedly #88281

Closed
opened 2021-05-14 12:08:43 +02:00 by Rik Schutte · 11 comments

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.38.0, 5.8.0-7630-generic, LLVM 11.0.0) AMD 4.6 (Core Profile) Mesa 20.3.2

Blender Version
Broken: version: 3.0.0 Alpha, branch: asset-browser-poselib, commit date: 2021-05-11 09:39, hash: 745505278d
Worked: (newest version of Blender that worked as expected)

Short description of error
When applying a pose including (lattice controls) with 'Flip Pose' enabled, the lattices behave unexpectedly, rotating in 180 degrees. even though their rotation value stored on the poselibrary is 0,0,0.

Exact steps for others to reproduce the error
Append/link a character with lattice controls in a file
after hitting 'n' in the viewport, Open the 'animation tab'
Create a pose with the lattices included and save it to the poselibrary. The pose will be stored in the 'current file'.
Then enable 'Flip Pose'.
Click and drag on the just created poselibrary pose and the lattice will rotate 180 degrees.

poselib_flippose_issue-yuv422.mp4

File has been included with a pose saved and applied to the file.

ellie_test_flipPose_issue.blend

The action 'ANI-Ellie_test_FlipPose' shows the keyed pose 'regular' on frame 10 and 'flipped' on frame 20

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits Graphics card: AMD Radeon RX 5700 XT (NAVI10, DRM 3.38.0, 5.8.0-7630-generic, LLVM 11.0.0) AMD 4.6 (Core Profile) Mesa 20.3.2 **Blender Version** Broken: version: 3.0.0 Alpha, branch: asset-browser-poselib, commit date: 2021-05-11 09:39, hash: `745505278d` Worked: (newest version of Blender that worked as expected) **Short description of error** When applying a pose including (lattice controls) with 'Flip Pose' enabled, the lattices behave unexpectedly, rotating in 180 degrees. even though their rotation value stored on the poselibrary is 0,0,0. **Exact steps for others to reproduce the error** Append/link a character with lattice controls in a file after hitting 'n' in the viewport, Open the 'animation tab' Create a pose with the lattices included and save it to the poselibrary. The pose will be stored in the 'current file'. Then enable 'Flip Pose'. Click and drag on the just created poselibrary pose and the lattice will rotate 180 degrees. [poselib_flippose_issue-yuv422.mp4](https://archive.blender.org/developer/F10217845/poselib_flippose_issue-yuv422.mp4) File has been included with a pose saved and applied to the file. [ellie_test_flipPose_issue.blend](https://archive.blender.org/developer/F10221578/ellie_test_flipPose_issue.blend) The action 'ANI-Ellie_test_FlipPose' shows the keyed pose 'regular' on frame 10 and 'flipped' on frame 20
Author

Added subscriber: @Rikstopher

Added subscriber: @Rikstopher
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

changing status for the blend file

changing status for the blend file

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This is caused by the X-axis of the bone pointing upwards:

image.png

The pose flipping code assumes that the X-axis of the bone is oriented left-right, and that thus flipping the X-axis will flip the pose correctly.

This is caused by the X-axis of the bone pointing upwards: ![image.png](https://archive.blender.org/developer/F10218086/image.png) The pose flipping code assumes that the X-axis of the bone is oriented left-right, and that thus flipping the X-axis will flip the pose correctly.

This issue was referenced by 72c34068cb

This issue was referenced by 72c34068cb44effc009a3adfa929a2c1bbdf802e

A potential fix is available in the temp-pose-flipping-fix-attempt branch, should be downloadable at https://builder.blender.org/download/experimental/ soon.

A potential fix is available in the `temp-pose-flipping-fix-attempt` branch, should be downloadable at https://builder.blender.org/download/experimental/ soon.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2021-07-13 15:59:21 +02:00

A fix has been committed in ac441249b4 to the asset-browser-poselib branch used by the Blender Studio animators. It'll be committed to master when the pose library itself gets committed.

A fix has been committed in ac441249b4 to the [asset-browser-poselib](https://developer.blender.org/diffusion/B/history/asset-browser-poselib/) branch used by the Blender Studio animators. It'll be committed to master when the pose library itself gets committed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88281
No description provided.